# tensorrt-stubs

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
src/tensorrt/: __init__.pyi
src/tensorrt_bindings/: __init__.pyi  tensorrt.pyi
src/tensorrt_stubs/: __init__.py
template/: README.md  pyproject.toml
template/tensorrt_stubs/: __init__.py
tests/: test_stubs.py
